Added configure.ac files for EBUCoreProcessor code. Removed redundant { in mxf2raw.cpp.

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,4 +1,4 @@
-SUBDIRS = include src apps tools test msvc_build
+SUBDIRS = include src EBUCoreProcessor apps tools test msvc_build
 
 
 pkgconfig_DATA = bmx-$(BMX_MAJORMINOR).pc
