--- a/apps/ebu2mxf/Makefile.am
+++ b/apps/ebu2mxf/Makefile.am
@@ -2,7 +2,7 @@ bin_PROGRAMS = ebu2mxf
 
 ebu2mxf_SOURCES = ebu2mxf.cpp
 
-mxf2raw_CXXFLAGS = $(BMX_CFLAGS)
-mxf2raw_LDADD = $(BMX_LDADDLIBS)
+ebu2mxf_CXXFLAGS = $(BMX_CFLAGS)
+ebu2mxf_LDADD = $(BMX_LDADDLIBS)
 
 
