Restructured code to support force-header argument and program flow. Updated makefile input to include new EBUCoreMapping.cpp.

--- a/EBUCoreProcessor/src/Makefile.am
+++ b/EBUCoreProcessor/src/Makefile.am
@@ -79,6 +79,7 @@ libebucore_la_SOURCES = \
 	EBU_CORE_20110915.cxx \
 	simpledc20021212.cxx \
 	xml.cxx \
+	EBUCoreMapping.cpp \
 	EBUCoreProcessor.cpp
 
 libebucore_la_CXXFLAGS = $(BMX_CFLAGS)
