Split EBUCoreMapping.cpp into EBUCoreReverseMapping.cpp to keep code easier to maintain: XSD->KLV: EBUCoreMapping.cpp, KLV->XSD: EBUCoreReverseMapping.cpp.

--- a/EBUCoreProcessor/src/Makefile.am
+++ b/EBUCoreProcessor/src/Makefile.am
@@ -80,6 +80,7 @@ libebucore_la_SOURCES = \
 	simpledc20021212.cxx \
 	xml.cxx \
 	EBUCoreMapping.cpp \
+	EBUCoreReverseMapping.cpp \
 	EBUCoreProcessor.cpp
 
 libebucore_la_CXXFLAGS = $(BMX_CFLAGS)
