--- a/msvc_build/vs10/apps/raw2bmx/raw2bmx.vcxproj
+++ b/msvc_build/vs10/apps/raw2bmx/raw2bmx.vcxproj
@@ -53,7 +53,7 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <Optimization>Disabled</Optimization>
-      <AdditionalIncludeDirectories>..\..\;..\..\..\..\apps;..\..\..\..\..\ebu-libMXF;..\..\..\..\..\ebu-libMXF++;..\..\..\..\..\uriparser\include;..\..\..\..\include;..;C:\code\BMX\bmxlib-bmx\EBUCoreProcessor\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\..\;..\..\..\..\apps;..\..\..\..\..\ebu-libMXF;..\..\..\..\..\ebu-libMXFpp;..\..\..\..\..\uriparser\include;..\..\..\..\include;..;C:\code\BMX\bmxlib-bmx\EBUCoreProcessor\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;_CRT_SECURE_NO_DEPRECATE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <MinimalRebuild>true</MinimalRebuild>
       <BasicRuntimeChecks>EnableFastChecks</BasicRuntimeChecks>
@@ -66,7 +66,7 @@
     </ClCompile>
     <Link>
       <AdditionalDependencies>libMXF.lib;libMXF++.lib;uriparser.lib;bmx.lib;EBUCoreProcessor.lib;xerces-c_3D.lib;ole32.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>..\..\..\..\..\ebu-libMXF\msvc_build\vs10\mxf\Debug;..\..\..\..\..\ebu-libMXF++\msvc_build\vs10\libMXF++\Debug;..\..\..\..\..\uriparser\win32;..\..\bmx\Debug;C:\code\BMX\bmxlib-bmx\msvc_build\vs10\Debug;C:\code\EBU-SDK\xerces-c-3.1.1-x86-windows-vc-10.0\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>..\..\..\..\..\ebu-libMXF\msvc_build\vs10\mxf\Debug;..\..\..\..\..\ebu-libMXFpp\msvc_build\vs10\libMXF++\Debug;..\..\..\..\..\uriparser\win32;..\..\bmx\Debug;C:\code\BMX\bmxlib-bmx\msvc_build\vs10\Debug;C:\code\EBU-SDK\xerces-c-3.1.1-x86-windows-vc-10.0\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <SubSystem>Console</SubSystem>
       <TargetMachine>MachineX86</TargetMachine>
@@ -74,7 +74,7 @@
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
-      <AdditionalIncludeDirectories>..\..\;..\..\..\..\apps;..\..\..\..\..\ebu-libMXF;..\..\..\..\..\ebu-libMXF++;..\..\..\..\..\uriparser\include;..\..\..\..\include;..;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\..\;..\..\..\..\apps;..\..\..\..\..\ebu-libMXF;..\..\..\..\..\ebu-libMXFpp;..\..\..\..\..\uriparser\include;..\..\..\..\include;..;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;_CRT_SECURE_NO_DEPRECATE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
       <PrecompiledHeader>
@@ -84,7 +84,7 @@
     </ClCompile>
     <Link>
       <AdditionalDependencies>libMXF.lib;libMXF++.lib;uriparser.lib;bmx.lib;ole32.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>..\..\..\..\..\ebu-libMXF\msvc_build\vs10\mxf\Release;..\..\..\..\..\ebu-libMXF++\msvc_build\vs10\libMXF++\Release;..\..\..\..\..\uriparser\win32;..\..\bmx\Release;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>..\..\..\..\..\ebu-libMXF\msvc_build\vs10\mxf\Release;..\..\..\..\..\ebu-libMXFpp\msvc_build\vs10\libMXF++\Release;..\..\..\..\..\uriparser\win32;..\..\bmx\Release;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <SubSystem>Console</SubSystem>
       <OptimizeReferences>true</OptimizeReferences>
