--- a/msvc_build/vs10/bmx/bmx.vcxproj
+++ b/msvc_build/vs10/bmx/bmx.vcxproj
@@ -50,7 +50,7 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <Optimization>Disabled</Optimization>
-      <AdditionalIncludeDirectories>..;..\..\..;..\..\..\include;..\..\..\..\ebu-libMXF++;..\..\..\..\ebu-libMXF;..\..\..\..\uriparser\include;C:\code\BMX\bmxlib-bmx\EBUCoreProcessor\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..;..\..\..;..\..\..\include;..\..\..\..\ebu-libMXFpp;..\..\..\..\ebu-libMXF;..\..\..\..\uriparser\include;C:\code\BMX\bmxlib-bmx\EBUCoreProcessor\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>WIN32;_DEBUG;_LIB;_CRT_SECURE_NO_DEPRECATE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <MinimalRebuild>true</MinimalRebuild>
       <BasicRuntimeChecks>EnableFastChecks</BasicRuntimeChecks>
@@ -68,7 +68,7 @@
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
-      <AdditionalIncludeDirectories>..;..\..\..;..\..\..\include;..\..\..\..\ebu-libMXF++;..\..\..\..\ebu-libMXF;..\..\..\..\uriparser\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..;..\..\..;..\..\..\include;..\..\..\..\ebu-libMXFpp;..\..\..\..\ebu-libMXF;..\..\..\..\uriparser\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>WIN32;NDEBUG;_LIB;_CRT_SECURE_NO_DEPRECATE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
       <RuntimeTypeInfo>true</RuntimeTypeInfo>
