Completed functional code for xtractEBUCoreMetadata(), added SDK example app mxf2ebu for demonstration.

--- a/apps/Makefile.am
+++ b/apps/Makefile.am
@@ -1,4 +1,4 @@
-SUBDIRS = . mxf2raw raw2bmx bmxtranswrap ebu2mxf
+SUBDIRS = . mxf2raw raw2bmx bmxtranswrap ebu2mxf mxf2ebu
 
 
 noinst_LTLIBRARIES = libapp.la
