--- a/msvc_build/vs10/EBUCoreProcessor/EBUCoreProcessor.vcxproj
+++ b/msvc_build/vs10/EBUCoreProcessor/EBUCoreProcessor.vcxproj
@@ -79,8 +79,8 @@
     </ClCompile>
     <ClCompile Include="..\..\..\EBUCoreProcessor\src\EBUCoreReverseMapping.cpp" />
     <ClCompile Include="..\..\..\EBUCoreProcessor\src\EBU_CORE_20110915.cxx" />
+    <ClCompile Include="..\..\..\EBUCoreProcessor\src\EBU_CORE_20120403.cxx" />
     <ClCompile Include="..\..\..\EBUCoreProcessor\src\metadata\base\ebucoreAddressBase.cpp" />
-    <ClCompile Include="..\..\..\EBUCoreProcessor\src\metadata\base\ebucoreAddressLineBase.cpp" />
     <ClCompile Include="..\..\..\EBUCoreProcessor\src\metadata\base\ebucoreAlternativeTitleBase.cpp" />
     <ClCompile Include="..\..\..\EBUCoreProcessor\src\metadata\base\ebucoreBasicRelationBase.cpp" />
     <ClCompile Include="..\..\..\EBUCoreProcessor\src\metadata\base\ebucoreContactBase.cpp" />
@@ -96,12 +96,12 @@
     <ClCompile Include="..\..\..\EBUCoreProcessor\src\metadata\base\ebucoreGenreBase.cpp" />
     <ClCompile Include="..\..\..\EBUCoreProcessor\src\metadata\base\ebucoreIdentifierBase.cpp" />
     <ClCompile Include="..\..\..\EBUCoreProcessor\src\metadata\base\ebucoreLanguageBase.cpp" />
-    <ClCompile Include="..\..\..\EBUCoreProcessor\src\metadata\base\ebucoreLanguagePurposeBase.cpp" />
     <ClCompile Include="..\..\..\EBUCoreProcessor\src\metadata\base\ebucoreLocationBase.cpp" />
     <ClCompile Include="..\..\..\EBUCoreProcessor\src\metadata\base\ebucoreMainFrameworkBase.cpp" />
     <ClCompile Include="..\..\..\EBUCoreProcessor\src\metadata\base\ebucoreMetadataSchemeInformationBase.cpp" />
     <ClCompile Include="..\..\..\EBUCoreProcessor\src\metadata\base\ebucoreObjectTypeBase.cpp" />
     <ClCompile Include="..\..\..\EBUCoreProcessor\src\metadata\base\ebucoreOrganisationBase.cpp" />
+    <ClCompile Include="..\..\..\EBUCoreProcessor\src\metadata\base\ebucoreOrganisationDepartmentBase.cpp" />
     <ClCompile Include="..\..\..\EBUCoreProcessor\src\metadata\base\ebucorePeriodOfTimeBase.cpp" />
     <ClCompile Include="..\..\..\EBUCoreProcessor\src\metadata\base\ebucorePublicationHistoryEventBase.cpp" />
     <ClCompile Include="..\..\..\EBUCoreProcessor\src\metadata\base\ebucoreRatingBase.cpp" />
@@ -112,12 +112,12 @@
     <ClCompile Include="..\..\..\EBUCoreProcessor\src\metadata\base\ebucoreSubjectBase.cpp" />
     <ClCompile Include="..\..\..\EBUCoreProcessor\src\metadata\base\ebucoreTargetAudienceBase.cpp" />
     <ClCompile Include="..\..\..\EBUCoreProcessor\src\metadata\base\ebucoreTemporalBase.cpp" />
+    <ClCompile Include="..\..\..\EBUCoreProcessor\src\metadata\base\ebucoreTextualAnnotationBase.cpp" />
     <ClCompile Include="..\..\..\EBUCoreProcessor\src\metadata\base\ebucoreTitleBase.cpp" />
     <ClCompile Include="..\..\..\EBUCoreProcessor\src\metadata\base\ebucoreTypeBase.cpp" />
     <ClCompile Include="..\..\..\EBUCoreProcessor\src\metadata\base\ebucoreTypeGroupBase.cpp" />
     <ClCompile Include="..\..\..\EBUCoreProcessor\src\metadata\base\ebucoreVersionBase.cpp" />
     <ClCompile Include="..\..\..\EBUCoreProcessor\src\metadata\ebucoreAddress.cpp" />
-    <ClCompile Include="..\..\..\EBUCoreProcessor\src\metadata\ebucoreAddressLine.cpp" />
     <ClCompile Include="..\..\..\EBUCoreProcessor\src\metadata\ebucoreAlternativeTitle.cpp" />
     <ClCompile Include="..\..\..\EBUCoreProcessor\src\metadata\ebucoreBasicRelation.cpp" />
     <ClCompile Include="..\..\..\EBUCoreProcessor\src\metadata\ebucoreContact.cpp" />
@@ -134,12 +134,12 @@
     <ClCompile Include="..\..\..\EBUCoreProcessor\src\metadata\ebucoreGenre.cpp" />
     <ClCompile Include="..\..\..\EBUCoreProcessor\src\metadata\ebucoreIdentifier.cpp" />
     <ClCompile Include="..\..\..\EBUCoreProcessor\src\metadata\ebucoreLanguage.cpp" />
-    <ClCompile Include="..\..\..\EBUCoreProcessor\src\metadata\ebucoreLanguagePurpose.cpp" />
     <ClCompile Include="..\..\..\EBUCoreProcessor\src\metadata\ebucoreLocation.cpp" />
     <ClCompile Include="..\..\..\EBUCoreProcessor\src\metadata\ebucoreMainFramework.cpp" />
     <ClCompile Include="..\..\..\EBUCoreProcessor\src\metadata\ebucoreMetadataSchemeInformation.cpp" />
     <ClCompile Include="..\..\..\EBUCoreProcessor\src\metadata\ebucoreObjectType.cpp" />
     <ClCompile Include="..\..\..\EBUCoreProcessor\src\metadata\ebucoreOrganisation.cpp" />
+    <ClCompile Include="..\..\..\EBUCoreProcessor\src\metadata\ebucoreOrganisationDepartment.cpp" />
     <ClCompile Include="..\..\..\EBUCoreProcessor\src\metadata\ebucorePeriodOfTime.cpp" />
     <ClCompile Include="..\..\..\EBUCoreProcessor\src\metadata\ebucorePublicationHistoryEvent.cpp" />
     <ClCompile Include="..\..\..\EBUCoreProcessor\src\metadata\ebucoreRating.cpp" />
@@ -150,6 +150,7 @@
     <ClCompile Include="..\..\..\EBUCoreProcessor\src\metadata\ebucoreSubject.cpp" />
     <ClCompile Include="..\..\..\EBUCoreProcessor\src\metadata\ebucoreTargetAudience.cpp" />
     <ClCompile Include="..\..\..\EBUCoreProcessor\src\metadata\ebucoreTemporal.cpp" />
+    <ClCompile Include="..\..\..\EBUCoreProcessor\src\metadata\ebucoreTextualAnnotation.cpp" />
     <ClCompile Include="..\..\..\EBUCoreProcessor\src\metadata\ebucoreTitle.cpp" />
     <ClCompile Include="..\..\..\EBUCoreProcessor\src\metadata\ebucoreType.cpp" />
     <ClCompile Include="..\..\..\EBUCoreProcessor\src\metadata\ebucoreTypeGroup.cpp" />
@@ -161,6 +162,7 @@
     <ClInclude Include="..\..\..\EBUCoreProcessor\include\EBUCoreMapping.h" />
     <ClInclude Include="..\..\..\EBUCoreProcessor\include\EBUCoreProcessor.h" />
     <ClInclude Include="..\..\..\EBUCoreProcessor\include\EBU_CORE_20110915.hxx" />
+    <ClInclude Include="..\..\..\EBUCoreProcessor\include\EBU_CORE_20120403.hxx" />
     <ClInclude Include="..\..\..\EBUCoreProcessor\include\metadata\base\ebucoreAddressBase.h" />
     <ClInclude Include="..\..\..\EBUCoreProcessor\include\metadata\base\ebucoreContactBase.h" />
     <ClInclude Include="..\..\..\EBUCoreProcessor\include\metadata\base\ebucoreContactDetailsBase.h" />
